	from Kimball Thurston <kimball@sgrail.com>, and more robust checking
	in the pasting code.
	
-------------------------------------------------------------------------------
Fri Mar 17 18:27:51 PST 2000	Michael Jennings <mej@eterm.org>

	I added accelerated scrollwheel support.  I also added a #define in
	src/feature.h for specifying the number of lines of context to keep
	when paging up or down.

	Also, we're back to the old behavior where home on input won't be
	triggered unless the key pressed has an associated string value.  I
	went back on this because Shift causing a jump to the bottom was
	really annoying when trying to Shift-PgUp or Shift-PgDown.  Sorry,
	Darren, but you lose.
	
-------------------------------------------------------------------------------
Fri Mar 24 18:16:02 PST 2000	Michael Jennings <mej@eterm.org>

	Added a patch from Kimball Thurston <kimball@sgrail.com> for XIM.  I
	also added support for two new escape sequences at the request of
	Cale Gibbard <gibbard@bfree.on.ca>.  "\e]Pnrrggbb" can now be used
	to modify the color palette at runtime, and "\e]R" will restore the
	defaults.  These are compatible with the Linux console.
	
-------------------------------------------------------------------------------
Mon Mar 27 12:48:09 PST 2000	Michael Jennings <mej@eterm.org>

	Some quick fixes from Cale Gibbard <gibbard@bfree.on.ca> for the color
	changing stuff.
	
-------------------------------------------------------------------------------
Mon Mar 27 19:08:03 PST 2000	Michael Jennings <mej@eterm.org>

	--shade and --tint have returned with the same syntax as before.
	
-------------------------------------------------------------------------------
Tue Mar 28 12:31:06 PST 2000	Michael Jennings <mej@eterm.org>

	You can tint by X color values (like "grey75" or "MidnightBlue" or
	"#8080ff").  Severely twisted. :-)
	
-------------------------------------------------------------------------------